[package]
name = "lumen"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "CLI tool to summarise git commits using AI"
tags = ["cli", "AI", "git", "commit", "summarise"]
repository = "https://github.com/jnsahaj/lumen"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.83"
spinoff = { version = "0.8.0", features = ["dots"] }
