[package]
name = "lumen"
version = "0.5.1"
edition = "2021"
license = "MIT"
description = "Instant AI Git Commit Summaries from CLI (no API key required)"
keywords = ["cli", "terminal", "ai", "git", "commit"]
categories = ["command-line-interface", "command-line-utilities"]
repository = "https://github.com/jnsahaj/lumen"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.83"
spinoff = { version = "0.8.0", features = ["dots"] }

[profile.release]
lto = true
